[gd_scene load_steps=2 format=3 uid="uid://cv4x9mp3nq2bt"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 30
script = ExtResource("1_pause")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Run Stats:"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume (Tab)"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit Run"
